--- a/next-app/app/_components/hero/Hero.module.css
+++ b/next-app/app/_components/hero/Hero.module.css
@@ -1,5 +1,6 @@
 .container {
   height: 300px;
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
